<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_SAFETY_FBDECOUPLE" Id="{f211de74-1df3-4159-adfd-3c719e548b38}">
    <Declaration><![CDATA[TYPE ST_SAFETY_FBDECOUPLE:
STRUCT
	uStatus							: U_SAFETY_DECOUPLE; 		(* Typ zalezny od bloku *)
	eState							: E_SAFETY_FBState;			(* Enum ze statusem bloku *)
	bGeneralError					: BOOL; 					(* Gdy wystapi chociaz jeden Error *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>